updated sh file